force-app/main/default/objects/Animal__c/Animal__c.object-meta.xml
<CustomObject>
    <description>Used to track information about animals managed by the agency.</description>
    <label>Animal</label>
    <nameField>
        <label>Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>