force-app/main/default/objects/Animal__c/fields/Animal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Animal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who adopted the animal</description>
    <label>Animal Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>