force-app/main/default/objects/Animal__c/fields/Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>Animal_Type__c</fullName>
    <description>Type of animal</description>
    <label>Animal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>